Improving HTML structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recordando Jquery</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Film library app</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-    <h2>Recordando JQuery</h2>
+    <header>
+        <span id="logo"></span>
+        <h1 id="app_title">FILM LIBRARY APP</h1>
+        <h2 id="app_description"> Your simple app for save your own film database</h2>
+    </header>
+    
+    <section id="content">
+        <div id="search">
+
+        </div>
+        <div id="search_results">
+            
+        </div>
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
