--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film library app</title>
+    <link rel="stylesheet" href="css/main.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
     <header>
-        <span id="logo"></span>
-        <h1 id="app_title">FILM LIBRARY APP</h1>
-        <h2 id="app_description"> Your simple app for save your own film database</h2>
+        <img src="img/movie_reel.png" alt="film_library_logo" id="logo">
+        <span id="title_box">
+            <h1 id="app_title">FILM LIBRARY APP</h1>
+            <h2 id="app_description"> Your simple app for save your own film database</h2>
+        </span>
     </header>
     
     <section id="content">
@@ -19,7 +22,7 @@
 
         </div>
         <div id="search_results">
-            
+
         </div>
     </section>
 
