Including search divs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     
     <section id="content">
         <div id="search">
-
+            <label for="searches"> Film searching </label><input type="text" name="search" id="search">
+            <input type="button" value="Search" id="search_button">
         </div>
         <div id="search_results">
 
