Improving CSS II

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <section id="content">
-        <div id="search">
+        <div id="search_box">
             <label for="searches"> Film searching </label><input type="text" name="search" id="search">
             <input type="button" value="Search" id="search_button">
         </div>
