Read JSON with $.GetJSON

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </header>
     
     <section id="content">
-        <div id="search_box">
+        <div id="search_box">            
             <label for="searches"> Film searching </label><input type="text" name="search" id="search">
             <input type="button" value="Search" id="search_button">
         </div>
         <div id="search_results">
-
+            <h3>Films list</h3>
         </div>
     </section>
 
