--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Film library app</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="img/movie_reel.png">
-    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
